--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gray-matter": "^4.0.3",
     "slugify": "^1.6.5",
     "tailwindcss": "^3.2.4",
+    "yarn": "^1.22.22",
     "zod": "^3.20.2"
   },
   "devDependencies": {
