--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,10 @@ jobs:
         git config --global user.email "actions@github.com"
         
         # Clone the dist repository
-        git clone https://${{ secrets.GITHUB_TOKEN }}@github.com/yourusername/blogster-dist.git dist-repo
+        git clone https://${{ secrets.GITHUB_TOKEN }}@github.com/yourusername/distributables-blog.git dist-repo
         
         # Copy built files to dist repo
-        cd dist-repo
+        cd distributables-blog
         git rm -r . || true  # Remove existing files
         cp -r ../dist/* .
         
