--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
         
-        # Clone the dist repository
-        git clone https://${{ secrets.GITHUB_TOKEN }}@github.com/laucha54321/distributables-blog.git distributables-blog
+        # Clone using the correct token format
+        git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/laucha54321/distributables-blog.git distributables-blog
         
         # Copy built files to dist repo
         cd distributables-blog
