Modify workflow to clone repo without token in URL
Updated GitHub Actions workflow to clone repository without token in URL and set remote URL for push.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
         
-        # Clone using the correct token format
-        git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/laucha54321/distributables-blog.git distributables-blog
+        # Clone WITHOUT token in URL
+        git clone https://github.com/laucha54321/distributables-blog.git distributables-blog
         
         # Copy built files to dist repo
         cd distributables-blog
@@ -41,6 +41,9 @@ jobs:
         # Commit and push
         git add .
         git commit -m "Deploy: Update from source repo ${{ github.sha }}"
+
+        # Configure Git to use the token from environment
+        git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/laucha54321/distributables-blog.git
         git push origin master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
