--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,32 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build Astro site
+      - name: Build Astro site (no minification)
         run: npm run build
+        # Astro builds without minification by default in your case
+
+      - name: Install and run HTML minifier
+        run: |
+          # Install html-minifier globally
+          npm install -g html-minifier
+          
+          # Minify ALL HTML files in the dist folder
+          echo "Minifying HTML files..."
+          find dist -name "*.html" -exec html-minifier \
+            --collapse-whitespace \
+            --remove-comments \
+            --remove-optional-tags \
+            --remove-redundant-attributes \
+            --remove-script-type-attributes \
+            --remove-tag-whitespace \
+            --use-short-doctype \
+            --minify-css true \
+            --minify-js true \
+            -o {} {} \;
+          
+          echo "HTML minification complete!"
+          echo "Minified files:"
+          find dist -name "*.html" -exec echo "  - {}" \;
 
       - name: Clone dist repo with PAT
         env:
@@ -44,7 +68,7 @@ jobs:
           # Remove everything except the .git directory
           find . -mindepth 1 -maxdepth 1 ! -name ".git" -exec rm -rf {} +
 
-          # Copy new build
+          # Copy new build (now minified)
           cp -r ../dist/. .
 
           # Commit if there are changes
